@@ -7,6 +7,7 @@
 #
 # Update:
 #
+#
 ##
 
 __docformat__ = "restructuredtext en"
@@ -20,18 +21,26 @@ import os
 import time
 
 from rcsb.utils.io.FileUtil import FileUtil
-
-# from rcsb.utils.io.MarshalUtil import MarshalUtil
+from rcsb.utils.io.MarshalUtil import MarshalUtil
+from rcsb.utils.seqalign.MiscUtils import MiscUtils
 
 logger = logging.getLogger(__name__)
 
 
 class DrugBankTargetProvider(object):
-    """Utilities to manage DrugBank target FASTA data."""
+    """Utilities to manage DrugBank target FASTA data.
+
+    UniProt mapping URL template:
+
+        https://go.drugbank.com/polypeptides/P23458
+    """
 
     def __init__(self, **kwargs):
         #
-        self.__fastaPathList = self.__reload(**kwargs)
+        self.__cachePath = kwargs.get("cachePath", ".")
+        self.__dirPath = os.path.join(self.__cachePath, "DrugBank-targets")
+        self.__fastaPathList = self.__reload(self.__dirPath, **kwargs)
+        self.__consolidateFasta(self.__dirPath, self.__fastaPathList, **kwargs)
         self.__version = None
 
     def testCache(self):
@@ -44,11 +53,11 @@ class DrugBankTargetProvider(object):
     def getVersion(self):
         return None
 
-    def __reload(self, **kwargs):
+    def __reload(self, dirPath, **kwargs):
         """Reload DrugBank target FASTA data files.
 
         Args:
-            cachePath (str, optional): path to top cache directory
+            dirPath (str, optional): path to DrugBank cache directory
             useCache (bool, optional): flag to use cached files. Defaults to True.
 
         Returns:
@@ -64,12 +73,11 @@ class DrugBankTargetProvider(object):
             "https://go.drugbank.com/releases/latest/downloads/transporter-all-polypeptide-sequences",
         ]
 
-        dirPath = os.path.join(kwargs.get("cachePath", "."), "DrugBank-targets")
         useCache = kwargs.get("useCache", True)
         username = kwargs.get("username", None)
         password = kwargs.get("password", None)
-        # mU = MarshalUtil(workPath=dirPath)
         #
+
         fU = FileUtil()
         fU.mkdir(dirPath)
         #
@@ -120,5 +128,43 @@ class DrugBankTargetProvider(object):
                 endTime = time.time()
                 logger.info("Completed unzip at %s (%.4f seconds)", time.strftime("%Y %m %d %H:%M:%S", time.localtime()), endTime - startTime)
                 retFilePathList.append(retFilePath)
-        #
         return retFilePathList
+
+    def __consolidateFasta(self, dirPath, inpPathList, **kwargs):
+        #
+        drugBankfastaFileName = kwargs.get("drugBankfastaFileName ", "drugbank_targets.fa")
+        drugBankTargetMapFileName = kwargs.get("drugBankTargetMapFileName", "drugbank_target_drug_map.json")
+        addTaxonomy = kwargs.get("addTaxonomy", False)
+        #
+        mU = MarshalUtil(workPath=dirPath)
+        oD = {}
+        uD = {}
+        try:
+            if addTaxonomy:
+                miscU = MiscUtils()
+                outDirPath = os.path.join(self.__cachePath, "uniprot_id_mapping_selected")
+                taxMapFileName = "uniprot_taxonomy.pic"
+                taxD = miscU.getUniprotXref(13, outDirPath, taxMapFileName, fmt="pickle", useCache=True)
+            #
+            for fp in inpPathList:
+                fD = mU.doImport(fp, fmt="fasta", commentStyle="default")
+                for seqId, sD in fD.items():
+                    tL = seqId[seqId.find("(") + 1 : seqId.find(")")]
+                    dbIdL = [v.strip() for v in tL.split(";")]
+                    seq = sD["sequence"]
+                    tL = seqId.split("|")
+                    unpId = tL[1].split(" ")[0]
+                    if addTaxonomy:
+                        taxId = taxD[unpId] if unpId in taxD else "-1"
+                        seqId = unpId + "|" + taxId
+                    else:
+                        seqId = unpId
+                    uD.setdefault(unpId, []).extend(dbIdL)
+                    oD[seqId] = {"sequence": seq}
+            ok1 = mU.doExport(os.path.join(dirPath, drugBankfastaFileName), oD, fmt="fasta")
+            ok2 = mU.doExport(os.path.join(dirPath, drugBankTargetMapFileName), uD, fmt="json")
+            return ok1 & ok2
+        except Exception as e:
+            logger.exception("Failing with %s", str(e))
+        #
+        return False
